# Practicas_IGV

./: CMakeLists.txt  README.md  cgvCamera.cpp  cgvCamera.h  cgvColor.cpp  cgvColor.h  cgvCylinder.cpp  cgvCylinder.h  cgvInterface.cpp  cgvInterface.h  cgvLightSource.cpp  cgvLightSource.h  cgvMaterial.cpp  cgvMaterial.h  cgvPoint.cpp  cgvPoint.h  cgvPoint3D.cpp  cgvPoint3D.h  cgvScene3D.cpp  cgvScene3D.h  cgvTexture.cpp  cgvTexture.h  cgvTriangleMesh.cpp  cgvTriangleMesh.h  conanfile.py  pr1.cpp  pr2.cpp  pr2a.cpp
pr2a_conan_resuelta/pr2a_conan_resuelta/: CMakeLists.txt  cgvCamera.cpp  cgvCamera.h  cgvCylinder.cpp  cgvCylinder.h  cgvInterface.cpp  cgvInterface.h  cgvPoint3D.h  cgvScene3D.cpp  cgvScene3D.h  cgvTriangleMesh.cpp  cgvTriangleMesh.h  pr2a.cpp
